<resources>
    <!--    Access token-->

    <string name="app_name">DropEx Driver</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="continue_text">Continue</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="login">Login</string>
    <string name="forgot_password_textView">Forgot Password</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="email_textView">Email</string>
    <string name="log_out">Log Out</string>
    <string name="back_to_login_textView">Back to login</string>
    <string name="country_code_254">+254</string>
    <string name="already_have_an_account_textView">Already have an account?</string>
    <string name="sign_in_textView">Sign In</string>
    <string name="register_account_textView">Register Account</string>
    <string name="enter_your_email_hint">Enter your email</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="access_token" translatable="false">sk.eyJ1IjoibS1ndWRsZSIsImEiOiJja3Jzd3BtYXQzZTUxMzFwZW5lOWpsZnRjIn0.QIdA-7eQZBC6G_K54vutQA</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didnt grant location permissions.</string>

    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="simulate_route">Simulate Route</string>
    <string name="start_from_location">Start route from current location</string>
    <string name="language">Language</string>
    <string name="unit_type">Unit Type</string>
    <string name="route_profile">Route Profile</string>

    <string name="job_id">JobId</string>
    <string name="vehicle_id">VehicleId</string>
    <string name="search_input">Search…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="unit_type_key" translatable="false">unit_type</string>
    <string name="simulate_route_key" translatable="false">simulate_route</string>
    <string name="start_from_location_key" translatable="false">start_from_location</string>
    <string name="language_key" translatable="false">language</string>
    <string name="route_profile_key" translatable="false">route_profile</string>
    <string name="first_start_dialog_key" translatable="false">first_start_dialog</string>
    <string name="first_navigation_dialog_key" translatable="false">first_navigation_dialog</string>
    <string name="default_locale" translatable="false">default_for_device</string>
    <string name="default_unit_type" translatable="false">default_for_device</string>
    <string name="current_night_mode" translatable="false">current_night_mode</string>

    <string name="error_route_not_available">Current route is not available</string>
    <string name="error_select_longer_route">Please select a longer route</string>
    <string name="error_valid_route_not_found">Valid route not found.</string>
    <string name="error_calculating_route">There was an error calculating the route</string>
    <string name="error_fetching_solution">There was an error fetching the solution</string>
    <string name="error_fetching_geocoding">There was an error fetching results from the geocoding API</string>
    <string name="error_vehicle_not_found">Vehicle not found</string>
    <string name="error_location_not_found">Location not found</string>
    <string name="error_geocoding_no_location">No location found</string>
    <string name="error_too_many_waypoints">A route cannot have more than 25 waypoints</string>
    <string name="error_not_enough_waypoints">A route needs at least 2 waypoints</string>
    <string name="error_no_browser_installed">No browser installed</string>
    <string name="error_too_far_from_start_title">Too far from start</string>
    <string name="error_too_far_from_start_message">Would you like to recalculate the route from your current location?</string>
    <string name="explanation_long_press_waypoint">Long press map to place waypoint</string>
    <string name="launch_navigation">Launch Navigation</string>
    <string name="reset_route">Reset Route</string>
    <string name="fetch_solution">Fetch Solution</string>
    <string name="geocoding_search">Search</string>
    <string name="help_message_title">Getting Started</string>
    <string name="legal_title">Legal Notice</string>
    <string name="agree">I agree</string>
    <string name="github">Contribute on Github</string>

    <string name="open_gh_maps">Open Route from GH Maps</string>
    <string name="open_vrp_solution">Open VRP Solution</string>
    <string name="fname_label">First name</string>
    <string name="save">save</string>
    <string name="surname_label">"Last name "</string>
    <string name="phone_label">Phone number</string>
    <string name="verified_label">verified</string>
    <string name="email_label">Email</string>
    <string name="nav_username">Username</string>
    <string name="label_view_profile">View Profile</string>
    <string name="nav_user_desc">Profile picture</string>
    <string name="channel_id" translatable="false">101</string>
    <string name="menu_work_mode">Work Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="plate_number">Car Plate Number</string>
    <string name="manufactured_year">Manufactured Year</string>
    <string name="start_work">Start Work</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm">Confirm</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="launch_activity">Launch activity</string>
</resources>